--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         ]
     },
     "require": {
-        "kestukas/akeneo": "^5.0.0"
+        "akeneo/pim-community-dev": "^5.0.0"
     },
     "require-dev": {
         "doctrine/doctrine-migrations-bundle": "1.3.2",
