--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "akeneo/pim-community-standard",
+    "name": "kestukas/akeneo",
     "description": "The \"Akeneo Community Standard Edition\" distribution",
     "license": "OSL-3.0",
     "type": "project",
