--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 # IT COULD BE OVERWRITTEN DURING THE LAST UPDATE
 # You must use .env.local to overload ENV VARs
 
-APP_ENV=prod
-APP_DEBUG=0
+APP_ENV=dev
+APP_DEBUG=1
 APP_DATABASE_HOST=mysql
 APP_DATABASE_PORT=null
 APP_DATABASE_NAME=akeneo_pim
@@ -30,3 +30,4 @@ PUBSUB_TOPIC_JOB_QUEUE=
 PUBSUB_SUBSCRIPTION_WEBHOOK=
 PUBSUB_SUBSCRIPTION_JOB_QUEUE=
 XDEBUG_MODE=off
+EVENTS_API_REQUEST_URL=https://uk.dilling.com/crons/event.php
